cambios hechos vote funcional